# fabricio-nogueira

./: README.md
mutual-exclusion-centralized/: README.md
paper/: README.md  sd-print-high-availability-strategies-in-distributed-systems-a-practical-guide.pptx
process/: .gitignore  README.md  docker-compose.yaml  prepare.sh
process/services/client/: .env.sample  README.md  config.yaml  pyproject.toml
process/services/service_a/: .flake8  Dockerfile  README.md  pyproject.toml  service.py
process/services/service_a/settings/: decorators.py  logs.py  redis.py  settings.py
process/services/service_b/: .dockerignore  .env.sample  README.md  config.yaml  pyproject.toml  service.py
process/services/service_b/settings/: date_time.py  logs.py  settings.py
process/services/service_b/tests/: test_service.py
rpc/: README.md
rpc/clients/go/: go.mod
rpc/clients/go/count/: main.go
rpc/clients/go/event_consumer/: main.go
rpc/clients/go/greeting/: main.go
rpc/clients/go/settings/: rpc.go
rpc/clients/javascript/: count.js  event_producer.js  greeting.js  rpc.js
rpc/clients/python/: count.py  event_consumer.py  greeting.py  rpc.py
rpc/server/: handler.py  registry.py  server.py  settings.py
rpc/server/services/: __init__.py  counter.py  events.py  greetings.py  queue.py
